--- a/.github/workflows/sdk-reusable.yml
+++ b/.github/workflows/sdk-reusable.yml
@@ -22,6 +22,11 @@ on:
         required: true
         type: boolean
 
+env:
+  CARGO_TERM_COLOR: always
+  SOLANA_VERSION: 1.10.40
+  RUST_TOOLCHAIN: stable
+
 jobs:
   changes:
     name: Changes
