--- a/.github/actions/program/auctioneer/action.yml
+++ b/.github/actions/program/auctioneer/action.yml
@@ -9,5 +9,9 @@ description: Builds the dependencies for the Auctioneer program test
 runs:
   using: 'composite'
   steps:
-    - uses: ./.github/actions/build-token-metadata
-    - uses: ./.github/actions/build-auction-house
+    - uses: ./.github/actions/build-program
+      with:
+        name: token-metadata
+    - uses: ./.github/actions/build-program
+      with:
+        name: auction-house
