--- a/.github/actions/integration/hydra/action.yml
+++ b/.github/actions/integration/hydra/action.yml
@@ -10,8 +10,12 @@ runs:
   using: 'composite'
   steps:
     # Build Rust Programs
-    - uses: ./.github/actions/build-hydra
-    - uses: ./.github/actions/build-token-metadata
+    - uses: ./.github/actions/build-program
+      with:
+        name: hydra
+    - uses: ./.github/actions/build-program
+      with:
+        name: token-metadata
 
     # Install JS SDK deps
     - uses: ./.github/actions/yarn-install-and-build
