--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -70,6 +70,7 @@ jobs:
             ~/.cargo/git/db/
             ./rust/target
             ./target/
+            ./${{ inputs.name }}/target/
           key: ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUSTC_HASH }}
 
       # Build and install deps
