--- a/.github/workflows/program-reusable.yml
+++ b/.github/workflows/program-reusable.yml
@@ -99,6 +99,7 @@ jobs:
             ~/.cargo/git/db/
             ./rust/target
             ./target/
+            ./${{ inputs.name }}/target/
           key:
             ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{
             env.RUSTC_HASH }}
