--- a/.github/actions/build-program/action.yml
+++ b/.github/actions/build-program/action.yml
@@ -14,12 +14,11 @@ runs:
   steps:
     - uses: actions/cache@v3
       id: cache-program
-      working-directory: ./${{ inputs.name }}/program
       with:
         path: |
-          ../../test-programs
+          ./test-programs
         key:
-          program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('./**/Cargo.lock') }}
+          program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('./${{ inputs.name }}/**/Cargo.lock') }}
     - name: build-program
       if: steps.cache-program.outputs.cache-hit != 'true'
       working-directory: ./${{ inputs.name }}/program
