--- a/.github/actions/build-program/action.yml
+++ b/.github/actions/build-program/action.yml
@@ -24,7 +24,7 @@ runs:
           ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{
           env.RUSTC_HASH }}
       working-directory: ./${{ inputs.name }}/program
-      run: |
+    - run: |
         mkdir -p ../../test-programs
         cargo +${{ env.RUST_STABLE }} build-bpf --version
         cargo +${{ env.RUST_STABLE }} build-bpf --bpf-out-dir ../../test-programs/
