--- a/.github/actions/build-program/action.yml
+++ b/.github/actions/build-program/action.yml
@@ -26,7 +26,7 @@ runs:
           program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       id: cache-program
     - name: "Build: ${{ inputs.name }}"
-      working-directory: ./token-metadata/program
+      working-directory: ./${{ inputs.name }}/program
       run: |
         mkdir -p ../../test-programs
         cargo +${{ env.RUST_STABLE }} build-bpf --version
