--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -16,26 +16,37 @@ jobs:
         node:
           - name: "auction-house"
             verify_rust: true
+            cargo_test: true
           - name: "auctioneer"
             verify_rust: true
+            cargo_test: true
           - name: "bubblegum"
             verify_rust: false
+            cargo_test: false
           - name: "candy-machine"
             verify_rust: true
+            cargo_test: true
           - name: "fixed-price-sale"
             verify_rust: false
+            cargo_test: false
           - name: "gumdrop"
             verify_rust: false
+            cargo_test: true
           - name: "hydra"
             verify_rust: true
+            cargo_test: true
           - name: "nft-packs"
             verify_rust: false
+            cargo_test: false
           - name: "token-entangler"
             verify_rust: true
+            cargo_test: true
           - name: "token-metadata"
             verify_rust: true
+            cargo_test: true
 
     uses: ./.github/workflows/program-reusable.yml
     with:
       name: ${{ matrix.node.name }}
       verify_rust: ${{ matrix.node.verify_rust }}
+      cargo_test: ${{ matrix.node.cargo_test }}
