--- a/.github/actions/yarn-install-and-verify/action.yml
+++ b/.github/actions/yarn-install-and-verify/action.yml
@@ -37,6 +37,7 @@ runs:
       with:
         path: '**/node_modules'
         key: ${{ inputs.cache_id }}-${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      if: ${{ env.CACHE }}
 
     ##############
     # Prepare Core and Dependencies
