--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -6,11 +6,15 @@ on:
       name:
         required: true
         type: string
+      cache:
+        required: true
+        type: boolean
 
 env:
   CARGO_TERM_COLOR: always
   SOLANA_VERSION: 1.10.40
   RUST_TOOLCHAIN: stable
+  CACHE: ${{ inputs.cache }}
 
 jobs:
   changes:
@@ -68,6 +72,7 @@ jobs:
             ~/.cargo/git/db/
             ./${{ inputs.name }}/program/target/
           key: program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        if: ${{ env.CACHE }}
 
       # Build and install deps
       - uses: ./.github/actions/integration
