--- a/.github/workflows/program-reusable.yml
+++ b/.github/workflows/program-reusable.yml
@@ -12,11 +12,15 @@ on:
       cargo_test:
         required: true
         type: boolean
+      cache:
+        required: true
+        type: boolean
 
 env:
   CARGO_TERM_COLOR: always
   SOLANA_VERSION: 1.10.40
   RUST_TOOLCHAIN: stable
+  CACHE: ${{ inputs.cache }}
 
 jobs:
   #  setup-versions:
@@ -100,7 +104,7 @@ jobs:
             ~/.cargo/git/db/
             ./${{ inputs.name }}/program/target/
           key: program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
+        if: ${{ env.CACHE }}
       # Run lint checks
       - uses: ./.github/actions/verify-rust
         if: ${{ inputs.verify_rust }}
