--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [master]
 
+  workflow_dispatch:
+    inputs:
+      cache:
+        description: 'Whether or not to use caching'
+        required: false
+        default: true
 
 jobs:
   program-tests:
@@ -50,3 +56,4 @@ jobs:
       name: ${{ matrix.node.name }}
       verify_rust: ${{ matrix.node.verify_rust }}
       cargo_test: ${{ matrix.node.cargo_test }}
+      cache: ${{ github.event.workflow_dispatch.inputs.cache != false }}
