--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
     inputs:
       cache:
-        description: 'Whether or not to use caching'
+        description: 'Use Cached Dependencies'
         required: false
         default: true
 
