--- a/.github/workflows/program-reusable.yml
+++ b/.github/workflows/program-reusable.yml
@@ -104,7 +104,7 @@ jobs:
             ~/.cargo/git/db/
             ./${{ inputs.name }}/program/target/
           key: program-${{ inputs.name }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        if: ${{ env.CACHE }}
+        if: ${{ env.CACHE != false }}
       # Run lint checks
       - uses: ./.github/actions/verify-rust
         if: ${{ inputs.verify_rust }}
