--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,4 +27,6 @@ jobs:
     uses: ./.github/workflows/integration-reusable.yml
     with:
       name: ${{ matrix.node.name }}
-      cache: ${{ github.event.workflow_dispatch.inputs.cache != false }}
+      cache: |
+        (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
+        (github.event_name != 'workflow_dispatch' && false)
