--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -56,6 +56,5 @@ jobs:
       name: ${{ matrix.node.name }}
       verify_rust: ${{ matrix.node.verify_rust }}
       cargo_test: ${{ matrix.node.cargo_test }}
-      cache: |
-        (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && false)
+      cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
+        (github.event_name != 'workflow_dispatch' && false) }}
