--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -99,4 +99,4 @@ jobs:
       build_auction_house: ${{ matrix.node.build_auction_house }}
       build_candy_machine: ${{ matrix.node.build_candy_machine }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && false) }}
+        (github.event_name != 'workflow_dispatch' && true) }}
