--- a/.github/workflows/program.yml
+++ b/.github/workflows/program.yml
@@ -13,6 +13,9 @@ on:
         required: false
         default: true
 
+env:
+  CACHE: 'false'
+
 jobs:
   program-tests:
     name: "Program: ${{ matrix.node.name }}"
@@ -57,4 +60,4 @@ jobs:
       verify_rust: ${{ matrix.node.verify_rust }}
       cargo_test: ${{ matrix.node.cargo_test }}
       cache: ${{ (github.event_name == 'workflow_dispatch' && github.event.workflow_dispatch.inputs.cache == 'true') ||
-        (github.event_name != 'workflow_dispatch' && false) }}
+        (github.event_name != 'workflow_dispatch' && env.CACHE == 'true') }}
